--- a/index_updated.html
+++ b/index_updated.html
@@ -17,7 +17,7 @@
 
     <div class="wrapper">
         <nav class="navbar navbar-dark navbar-expand-lg">
-            <a class="navbar-brand" href="index.html">UFO SIghtings</a>
+            <a class="navbar-brand" href="index_updated.html">UFO SIghtings</a>
         </nav>
     </div>
 
